--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
-<h1>DREAMFOOD</h1>
+<H1>ABOUT US</H1>
+
 <footer class="footer">
     <div class="footer-links">
     <footer><%= render 'shared/footer' %> </footer>
