--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,10 @@
-<H1>ABOUT US</H1>
+
+<div>
+    <div class="container card rounded-5 mx-auto my-5 py-3 px-4" data-loading-target="form"> <!-- Adjust padding and margin here -->
+    
+</div>
+</div>
+
 
 <footer class="footer">
     <div class="footer-links">
