--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,16 @@
-
-<div>
-    <div class="container card rounded-5 mx-auto my-5 py-3 px-4" data-loading-target="form"> <!-- Adjust padding and margin here -->
-    
+<div class="about card rounded-5 mx-auto my-5 py-3 px-4" data-loading-target="form">
+  <div class="row">
+    <div class="col-md-6 team-picture">
+      <%= image_tag "dreamteam.jpg", class: "team-image" %>
+    </div>
+    <div class="col-md-6 about-text">
+      <h3 class="about-heading">About Us</h3>
+      <p>
+        Your description of the team can go here. Provide information about your team, their goals, and what your app is about.
+      </p>
+    </div>
+  </div>
 </div>
-</div>
-
 
 <footer class="footer">
     <div class="footer-links">
