--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -1,15 +1,11 @@
 <h1>OUR WORK</h1>
 
-<!--<div class="category-cards">-->
-  <%# @categories.each do |category| %>
-    <%#= link_to category_path(category) do %>
-<!--      <div class="category-card"
-        style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%#= category.url %>)">
-        <p><%#= category.name%> </p>
-      </div>
-    <%# end %>-->
-  <%# end %>
-<!--</div>-->
+<div class="content-cards">
+  <% @contents.each do |content| %>
+    <div class="content-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= content.media_url %>)">
+    </div>
+  <% end %>
+</div>
 
 <footer class="footer">
     <div class="footer-links">
