fixed about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag "dreamteam.jpg", class: "team-image" %>
     </div>
     <div class="col-md-6 about-text">
-      <h3 class="about-heading">About Us</h3>
+      <h3 class="about-heading">Who are we?</h3>
       <p>
         Your description of the team can go here. Provide information about your team, their goals, and what your app is about.
       </p>
