--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,9 +20,9 @@
 
 
 
-<br>
+<!--<br>
 <footer class="footer">
     <div class="footer-links">
-    <footer><%= render 'shared/footer' %> </footer>
+    <footer><%#= render 'shared/footer' %> </footer>
     </div>
-</footer>
+</footer>-->
