--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,9 @@
           <li class="nav-item <%= 'active-page' if current_page?(contact_path) %>">
               <a class="nav-link" href="<%= contact_path %>"><strong>CONTACT</strong></a>
           </li>
+          <li class="nav-item <%= 'active-page' if current_page?(donations_path) %>">
+              <a class="nav-link" href="<%= donations_path %>"><strong>WE CARE</strong></a>
+          </li>
           <!-- Other navbar items -->
       </ul>
         <li class="nav-item dropdown">
