--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -1,8 +1,4 @@
-<!-- app/views/pages/gallery.html.erb -->
 <h1>OUR WORK</h1>
-
-<%= puts current_user.inspect %>
-
 
 <div class="content-cards">
   <% @contents.each do |content| %>
@@ -26,17 +22,30 @@
 <% if current_user&.admin? %>
   <!-- Show admin options here, e.g., add/delete buttons -->
   <div class="admin-options">
-    <%= simple_form_for(@content) do |f| %>
+    <%= simple_form_for(@content, url: contents_path, html: { method: :post }) do |f| %>
       <div class="row">
         <div class="col-md-12">
           <%= f.input :media, as: :file %>
         </div>
       </div>
+      <%= f.button :submit, class: 'btn btn-primary' %>
+    <% end %>
+
     <%= link_to "Add Media", class: 'add-media-link', data: { toggle: 'modal', target: '#addMediaModal' } %>
-      <!-- Display delete buttons for each media -->
-      <% @contents.each do |content| %>
-        <%= link_to "Delete", media_path(content), method: :delete, data: { confirm: 'Are you sure?' } %>
-      <% end %>
+
+<%= simple_form_for(@content, url: contents_path, html: { method: :post, multipart: true }) do |f| %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= f.input :media, as: :file %>
+    </div>
+  </div>
+  <%= f.button :submit, class: 'btn btn-primary' %>
+<% end %>
+
+
+    <!-- Display delete buttons for each media -->
+    <% @contents.each do |content| %>
+      <%= link_to "Delete", media_path(content), method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
   </div>
 <% end %>
