--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,13 +1,14 @@
 .images {
-  margin-top: 20px; /* Add margin to the top for separation */
+  // margin-top: 20px; /* Add margin to the top for separation */
   margin-bottom: 20px; /* Add margin to the bottom for separation */
 }
 
 #slideshow-image {
   width: 100%;
-  max-height: 50px; /* Set a fixed height */
+  max-height: 500px; /* Set a fixed height */
   object-fit: cover;
-  border: 1px solid #ddd;
+  // border: 1px solid #ddd;
+
 }
 
 .footer {
@@ -27,9 +28,14 @@
 }
 
 .card-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  // display: flex;
+  // justify-content: space-between;
+  // margin-top: 20px;
+  max-width: 300px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
 }
 
 .card {
