added donations page

--- a/app/views/pages/donations.html.erb
+++ b/app/views/pages/donations.html.erb
@@ -1,14 +1,127 @@
     <div class="about card rounded-5 mx-auto my-5 py-3 px-4" data-loading-target="form">
-      <p>Take a peek into the heart of Dreamfood with "Our Giving Moments." 🌟 See the good vibes we've shared through donations and community care snaps. It's all about spreading smiles and positive vibes</p>
+      <p> <strong>Our mission is to bring a solution into humanitarian issues and protect the nature existing for our living.</strong>
+
+<br>
+<br>
+The civilian population is often in humanitarian crises, regardless of whether these are conflicts created by human beings or natural disasters. We as the human race, face many issues with no direct solution. ONE NATION is  a problem resolver, we as ONE stand to bring a solution to critical situations.
+<br>
+<br>
+THE REIGN OF PEACE AND CHARITY FOR ALL.
+
+<br>
+<br>
+<strong>WE ARE FOR:</strong>
+
+<br>
+- Domestic abuse
+- Orphanages
+- Homeless
+- Autistic centers
+- Frail care centers
+- Soup kitchen
+- Night shelters
+- Hospice
+- Children education
+- Gender based violence
+- Drug rehab, etc.... providing much needed assistance.
+
+
+<br>
+<br>
+<strong>THE WORLD WE HAVE CREATED</strong>
+
+<br>
+<br>
+<strong>ONE NATION PREMIUM</strong>
+</p>
     </div>
 
+  <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d1.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+  <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d2.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+  <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d3.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mx-auto">
+  <div class="col-md-4 col-sm-6">
+    <div class="card mb-4">
+      <%= image_tag("d4.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+      <div class="card-body">
+      </div>
+    </div>
+  </div>
+
+    <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d5.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+      <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d6.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+      <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d7.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+      <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d8.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+
+  <div class="row mx-auto">
+    <div class="col-md-4 col-sm-6">
+      <div class="card mb-4">
+        <%= image_tag("d9.jpg", class: "card-img-top", alt: "Social Responsibility 1") %>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
+<br>
+<br>
+<br>
+<br>
 
+<div class="footer">
 
 <footer class="footer">
   <div class="footer-links">
     <footer><%= render 'shared/footer' %> </footer>
   </div>
 </footer>
+</div>
