--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="images">
-<!--<div id="image-container">-->
-<img id="slideshow-image" data-images='["<%= asset_path "image1.jpg" %>", "<%= asset_path "image2.jpg" %>", "<%= asset_path "image3.jpg" %>", "<%= asset_path "image4.jpg" %>", "<%= asset_path "image5.jpg" %>", "<%= asset_path "image6.jpg" %>", "<%= asset_path "image7.jpg" %>"]' alt="Slideshow Image">
-<!--</div>-->
+  <!--<div id="image-container">-->
+  <img id="slideshow-image" data-images='["<%= asset_path "image1.jpg" %>", "<%= asset_path "image2.jpg" %>", "<%= asset_path "image3.jpg" %>", "<%= asset_path "image4.jpg" %>", "<%= asset_path "image5.jpg" %>", "<%= asset_path "image6.jpg" %>", "<%= asset_path "image7.jpg" %>"]' alt="Slideshow Image">
+  <!--</div>-->
 </div>
 
 <div class="cuisine">
@@ -20,9 +20,14 @@
 
 
 
-<br>
-<footer class="footer">
-    <div class="footer-links">
+
+
+
+
+
+<%# <br> %>
+<%# <footer class="footer">
+  <div class="footer-links"> %>
     <footer><%= render 'shared/footer' %> </footer>
-    </div>
-</footer>
+  <%# </div>
+</footer> %>
