--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,13 +1,16 @@
 .images {
-  margin-top: 20px; /* Add margin to the top for separation */
+  // margin-top: 20px; /* Add margin to the top for separation */
   margin-bottom: 20px; /* Add margin to the bottom for separation */
+
 }
 
 #slideshow-image {
   width: 100%;
-  max-height: 50px; /* Set a fixed height */
+  max-height: 500px; /* Set a fixed height */
   object-fit: cover;
-  border: 1px solid #ddd;
+
+  // border: 1px solid #ddd;
+
 }
 
 .footer {
@@ -27,18 +30,23 @@
 }
 
 .card-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  // display: flex;
+  // justify-content: space-between;
+  // margin-top: 20px;
+  max-width: 300px;
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
 }
 
-.card {
-  flex: 0 0 48%; /* Set a percentage width for the cards */
-  box-sizing: border-box;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-}
+// .card {
+//   flex: 0 0 48%; /* Set a percentage width for the cards */
+//   box-sizing: border-box;
+//   border: 1px solid #ddd;
+//   border-radius: 8px;
+//   overflow: hidden;
+// }
 
 .card img {
   width: 100%;
