--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,19 @@
-<footer class="footer">
+<%# <footer class="footer">
     <div class="footer-links">
         <!-- Add target="_blank" to open links in a new tab/window -->
         <a href="https://www.instagram.com/onenationpremium_dreamfood/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.facebook.com/onenationpremium" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div> %>
+</footer>
+<footer class="footer">
+    <div class="footer-links">
+      <%# <a href="#"><i class="fab fa-github"></i></a> %>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+      <%# <a href="#"><i class="fab fa-linkedin"></i></a> %>
     </div>
+  </div>
+    <p>Made with Love by Achievo Team</p>
+  </div><div class="footer-copyright">All rights reserved</div>
 </footer>
