--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,32 @@
 
 
 
+<h1><%= @contents&.title %></h1>
+<p><%= @contents&.description %></p>
 
+<!-- Display existing reviews -->
+<h2>Reviews</h2>
+<% @contents.reviews.each do |review| %>
+  <p>Rating: <%= review.rating %></p>
+  <p><%= review.comment %></p>
+<% end %>
+
+<!-- Form to submit a new review -->
+<%= form_with(model: [@contents, Review.new], local: true) do |form| %>
+  <div class="field">
+    <%= form.label :rating %>
+    <%= form.number_field :rating %>
+  </div>
+
+  <div class="field">
+    <%= form.label :comment %>
+    <%= form.text_area :comment %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit 'Submit Review' %>
+  </div>
+<% end %>
 
 
 
